--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -17,6 +17,7 @@ env:
   TARGET_PATH: docs-repo
   NODE_VERSION: lts/*
   SYNC_BRANCH_PREFIX: auto-sync/
+  DOCS_REPO_TOKEN: ${{ secrets.DOCS_REPO_TOKEN }}
 
 jobs:
   sync-docs:
@@ -37,7 +38,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ${{ env.TARGET_REPO }}
-          token: ${{ secrets.DOCS_REPO_TOKEN }}
+          token: ${{ env.DOCS_REPO_TOKEN }}
           path: ${{ env.TARGET_PATH }}
 
       - name: ⚡ Setup Node.js
@@ -135,7 +136,7 @@ jobs:
         if: steps.sync.outputs.has_skipped == 'true'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.DOCS_REPO_TOKEN }}
+          github-token: ${{ env.DOCS_REPO_TOKEN }}
           script: |
             const fs = require('fs').promises;
 
@@ -174,10 +175,10 @@ jobs:
                   ].join('\n'),
                   labels: ['documentation', 'needs-docs', 'auto-created']
                 });
-              } catch (error) {
+              }
+              catch (error) {
                 console.error(`❌ Failed to create issue for ${file}:`, error.message);
               }
-            }
         env:
           SKIPPED_FILES: ${{ steps.sync.outputs.skipped_files }}
 
@@ -187,7 +188,7 @@ jobs:
         if: steps.sync.outputs.files_updated == '1'
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.DOCS_REPO_TOKEN }}
+          token: ${{ env.DOCS_REPO_TOKEN }}
           path: ${{ env.TARGET_PATH }}
           commit-message: "docs: sync from ${{ github.repository }}@${{ github.sha }}"
           branch: ${{ env.SYNC_BRANCH_PREFIX }}${{ github.run_id }}
