--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -167,7 +167,9 @@ jobs:
                     ``,
                     `### Content Preview`,
                     '```markdown',
-                    content.length > 1000 ? content.slice(0, 1000) + '\n...(truncated)' : content,
+                    content.length > 1000
+                      ? content.slice(0, 1000) + '\n...(truncated)'
+                      : content,
                     '```',
                     '',
                     '---',
@@ -175,14 +177,12 @@ jobs:
                   ].join('\n'),
                   labels: ['documentation', 'needs-docs', 'auto-created']
                 });
-              }
-              catch (error) {
+              } catch (error) {
                 console.error(`❌ Failed to create issue for ${file}:`, error.message);
               }
+            }
         env:
           SKIPPED_FILES: ${{ steps.sync.outputs.skipped_files }}
-
-
 
       - name: 📬 Create Pull Request
         if: steps.sync.outputs.files_updated == '1'
