--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -213,32 +213,33 @@ jobs:
           labels: |
             documentation
             auto-sync
-          reviewers: ${{ env.REVIEWERS }}
+          #  reviewers: ${{ env.REVIEWERS }}
 
       - name: 📊 Generate Summary
         if: always() && steps.detect.outputs.has_changes == 'true'
         run: |
           PR_URL="${{ steps.create_pr.outputs.pull-request-url }}"
-          cat >> $GITHUB_STEP_SUMMARY << EOF
+          cat >> $GITHUB_STEP_SUMMARY << "EOF"
           # 📚 Documentation Sync Summary
-          
+
           ## ✅ Documentation Files Updated
           These files were automatically synced from the technical repository to the front-facing documentation repository.
           ${{ steps.sync.outputs.synced_files || '_No files were synced_' }}
 
           ${PR_URL:+[View Pull Request]($PR_URL)}
-          
+
           ## ⚠️ Markdown Validation Warnings
           Some files may have formatting issues. These warnings do **not prevent syncing**, but you may want to review them:
           ${{ steps.validate.outputs.validation_errors || '_No validation issues found_' }}
-          
+
           ## ❌ Files Not Synced
           These files could not be synced because they’re missing in the documentation repo.  
           A GitHub issue was automatically created for each — the documentation team should review and add them.
 
           Files:
           ${{ steps.sync.outputs.skipped_files || '_No files were skipped_' }}
-          
+
           Issues created for missing files:
           $([ -n "$ISSUE_URLS" ] && echo "$ISSUE_URLS" | tr ',' '\n' | sed 's|^|- [View Issue](&)|' || echo '_No issues created_')
           EOF
+
