--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -219,6 +219,8 @@ jobs:
         if: always() && steps.detect.outputs.has_changes == 'true'
         run: |
           PR_URL="${{ steps.create_pr.outputs.pull-request-url }}"
+          SYNCED_FILES="${{ steps.sync.outputs.synced_files }}"   # Capture sync output in a variable
+          SKIPPED_FILES="${{ steps.sync.outputs.skipped_files }}" # Capture skipped output
           ISSUES_FORMATTED=$([ -n "$ISSUE_URLS" ] && echo "$ISSUE_URLS" | tr ',' '\n' | sed 's|^|- [View Issue](&)|' || echo '_No issues created_')
           
           cat >> $GITHUB_STEP_SUMMARY << EOF
@@ -226,7 +228,7 @@ jobs:
 
           ## ✅ Documentation Files Updated
           These files were automatically synced from the technical repository to the front-facing documentation repository.
-          ${{ steps.sync.outputs.synced_files || '_No files were synced_' }}
+          $SYNCED_FILES
 
           ${PR_URL:+[View Pull Request]($PR_URL)}
 
@@ -239,7 +241,8 @@ jobs:
           A GitHub issue was automatically created for each — the documentation team should review and add them.
 
           Files:
-          ${{ steps.sync.outputs.skipped_files || '_No files were skipped_' }}
+          $SKIPPED_FILES
 
           $ISSUES_FORMATTED
           EOF
+
