--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -67,12 +67,14 @@ jobs:
             echo "has_changes=false" >> "$GITHUB_OUTPUT"
             exit 0
           fi
-          echo "✅ Markdown changes detected that require sync:"
-          echo "$FILTERED"
-          echo "has_changes=true" >> "$GITHUB_OUTPUT"
-          echo "changed_files<<EOF" >> "$GITHUB_OUTPUT"
-          echo "$FILTERED" >> "$GITHUB_OUTPUT"
-          echo "EOF" >> "$GITHUB_OUTPUT"
+          {
+            echo "✅ Markdown changes detected that require sync:"
+            echo "$FILTERED"
+            echo "has_changes=true"
+            echo "changed_files<<EOF"
+            echo "$FILTERED"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
 
       - name: ✅ Validate Markdown Files
         if: steps.detect.outputs.has_changes == 'true'
@@ -117,6 +119,9 @@ jobs:
               SKIPPED_FILES="${SKIPPED_FILES}- ❌ \`${file}\` (no matching .mdx file found)\n"
             fi
           done <<< "${{ steps.detect.outputs.changed_files }}"
+          # assign has_skipped safely
+          has_skipped="$( [[ -n "$SKIPPED_FILES" ]] && echo 'true' || echo 'false' )"
+          # write everything to GITHUB_OUTPUT in one block
           {
             echo "synced_files<<EOF"
             echo -e "$SYNCED_FILES"
@@ -125,7 +130,7 @@ jobs:
             echo -e "$SKIPPED_FILES"
             echo "EOF"
             echo "files_updated=$FILES_UPDATED"
-            echo "has_skipped=$([[ -n "$SKIPPED_FILES" ]] && echo 'true' || echo 'false')"
+            echo "has_skipped=$has_skipped"
           } >> "$GITHUB_OUTPUT"
 
       - name: 📝 Create Issues for Missing Documentation
@@ -179,7 +184,7 @@ jobs:
 
       - name: Export Issue URLs
         if: steps.create_issues.outputs.issue-urls
-        run: echo "ISSUE_URLS=${{ steps.create_issues.outputs.issue-urls }}" >> $GITHUB_ENV
+        run: echo "ISSUE_URLS=\"${{ steps.create_issues.outputs.issue-urls }}\"" >> "$GITHUB_ENV"
 
       - name: 📬 Create Pull Request
         id: create_pr
@@ -219,11 +224,11 @@ jobs:
         if: always() && steps.detect.outputs.has_changes == 'true'
         run: |
           PR_URL="${{ steps.create_pr.outputs.pull-request-url }}"
-          SYNCED_FILES='${{ steps.sync.outputs.synced_files }}'
-          SKIPPED_FILES='${{ steps.sync.outputs.skipped_files }}'
+          SYNCED_FILES="${{ steps.sync.outputs.synced_files }}"
+          SKIPPED_FILES="${{ steps.sync.outputs.skipped_files }}"
           ISSUES_FORMATTED=$([ -n "$ISSUE_URLS" ] && echo "$ISSUE_URLS" | tr ',' '\n' | sed 's|^|- [View Issue](&)|' || echo '_No issues created_')
           
-          cat >> $GITHUB_STEP_SUMMARY << EOF
+          cat >> "$GITHUB_STEP_SUMMARY" << EOF
           # 📚 Documentation Sync Summary
 
           ## ✅ Documentation Files Updated
