--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -218,12 +218,26 @@ jobs:
       - name: 📊 Generate Summary
         if: always() && steps.detect.outputs.has_changes == 'true'
         run: |
+          # Get PR URL, synced and skipped files
           PR_URL="${{ steps.create_pr.outputs.pull-request-url }}"
-          SYNCED_FILES='${{ steps.sync.outputs.synced_files }}'
-          SKIPPED_FILES='${{ steps.sync.outputs.skipped_files }}'
-          ISSUES_FORMATTED=$([ -n "$ISSUE_URLS" ] && echo "$ISSUE_URLS" | tr ',' '\n' | sed 's|^|- [View Issue](&)|' || echo '_No issues created_')
-          
-          cat >> $GITHUB_STEP_SUMMARY << EOF
+          SYNCED_FILES="${{ steps.sync.outputs.synced_files }}"
+          SKIPPED_FILES="${{ steps.sync.outputs.skipped_files }}"
+
+          # Prepare issue links safely
+          if [ -n "$ISSUE_URLS" ]; then
+            ISSUES_FORMATTED=$(echo "$ISSUE_URLS" | tr ',' '\n' | sed 's|^|- [View Issue](&)|')
+          else
+            ISSUES_FORMATTED="_No issues created_"
+          fi
+
+          # Prepare validation errors safely
+          VALIDATION_ERRORS="${{ steps.validate.outputs.validation_errors }}"
+          if [ -z "$VALIDATION_ERRORS" ]; then
+            VALIDATION_ERRORS="_No validation issues found_"
+          fi
+
+          # Append safely to GitHub Step Summary
+          cat >> "$GITHUB_STEP_SUMMARY" << "EOF"
           # 📚 Documentation Sync Summary
 
           ## ✅ Documentation Files Updated
@@ -234,7 +248,7 @@ jobs:
 
           ## ⚠️ Markdown Validation Warnings
           Some files may have formatting issues. These warnings do **not prevent syncing**, but you may want to review them:
-          ${{ steps.validate.outputs.validation_errors || '_No validation issues found_' }}
+          $VALIDATION_ERRORS
 
           ## ❌ Files Not Synced
           These files could not be synced because they’re missing in the documentation repo.  
