--- a/.github/workflows/sync-docs-to-mintlify.yml
+++ b/.github/workflows/sync-docs-to-mintlify.yml
@@ -80,20 +80,20 @@ jobs:
         continue-on-error: true
         run: |
           echo "📌 Running markdownlint..."
-          VALIDATION_ERRORS=""
+          # Create a temporary file to store validation results
+          VALIDATION_FILE=$(mktemp)
           while IFS= read -r file; do
             if [ -f "$file" ]; then
               OUTPUT=$(markdownlint "$file" 2>&1 || true)
               if [ -n "$OUTPUT" ]; then
-                VALIDATION_ERRORS="${VALIDATION_ERRORS}**${file}**:\n${OUTPUT}\n\n"
+                # Store validation results with file as key (using ||| as delimiter)
+                echo "${file}|||${OUTPUT}" >> "$VALIDATION_FILE"
               fi
             fi
           done <<< "${{ steps.detect.outputs.changed_files }}"
-          {
-            echo "validation_errors<<EOF"
-            echo -e "$VALIDATION_ERRORS"
-            echo "EOF"
-          } >> "$GITHUB_OUTPUT"
+          
+          # Save the validation file path
+          echo "validation_file=$VALIDATION_FILE" >> "$GITHUB_OUTPUT"
 
       - name: 🚀 Sync Files to Target Repository
         if: steps.detect.outputs.has_changes == 'true'
@@ -101,28 +101,60 @@ jobs:
         run: |
           SYNCED_FILES=""
           SKIPPED_FILES=""
+          SYNCED_WARNINGS=""
+          SKIPPED_WARNINGS=""
           FILES_UPDATED=0
+          
+          # Read validation file if it exists
+          VALIDATION_FILE="${{ steps.validate.outputs.validation_file }}"
+          
           while IFS= read -r file; do
             [ ! -f "$file" ] && continue
             filename_base=$(basename "$file" .md)
             target_path=$(find "${{ env.TARGET_PATH }}" -type f -name "${filename_base}.mdx" | head -n 1)
+            
+            # Get validation warnings for this file
+            FILE_WARNINGS=""
+            if [ -f "$VALIDATION_FILE" ]; then
+              FILE_WARNINGS=$(grep "^${file}|||" "$VALIDATION_FILE" | sed "s|^${file}|||||" || true)
+            fi
+            
             if [ -n "$target_path" ]; then
+              # File can be synced
               if ! diff -q "$file" "$target_path" >/dev/null 2>&1; then
                 cp "$file" "$target_path"
                 relpath=$(realpath --relative-to="${{ env.TARGET_PATH }}" "$target_path")
                 SYNCED_FILES="${SYNCED_FILES}- ✅ \`${file}\` → \`${relpath}\`\n"
                 FILES_UPDATED=1
+                
+                # Add warnings for synced files
+                if [ -n "$FILE_WARNINGS" ]; then
+                  SYNCED_WARNINGS="${SYNCED_WARNINGS}**${file}**:\n${FILE_WARNINGS}\n\n"
+                fi
               fi
             else
+              # File cannot be synced
               SKIPPED_FILES="${SKIPPED_FILES}- ❌ \`${file}\` (no matching .mdx file found)\n"
+              
+              # Add warnings for skipped files
+              if [ -n "$FILE_WARNINGS" ]; then
+                SKIPPED_WARNINGS="${SKIPPED_WARNINGS}**${file}**:\n${FILE_WARNINGS}\n\n"
+              fi
             fi
           done <<< "${{ steps.detect.outputs.changed_files }}"
+          
           {
             echo "synced_files<<EOF"
             echo -e "$SYNCED_FILES"
             echo "EOF"
             echo "skipped_files<<EOF"
             echo -e "$SKIPPED_FILES"
+            echo "EOF"
+            echo "synced_warnings<<EOF"
+            echo -e "$SYNCED_WARNINGS"
+            echo "EOF"
+            echo "skipped_warnings<<EOF"
+            echo -e "$SKIPPED_WARNINGS"
             echo "EOF"
             echo "files_updated=$FILES_UPDATED"
             echo "has_skipped=$([[ -n "$SKIPPED_FILES" ]] && echo 'true' || echo 'false')"
@@ -142,29 +174,53 @@ jobs:
               .map(line => (line.match(/`([^`]+)`/) || [])[1])
               .filter(Boolean);
             console.log('Skipped files detected:', skippedFiles);
+            
+            const skippedWarnings = process.env.SKIPPED_WARNINGS || '';
+            
             let issueUrls = [];
             for (const file of skippedFiles) {
               try {
                 const content = await fs.readFile(file, 'utf8');
                 const fileName = file.split('/').pop();
+                
+                // Extract warnings for this specific file
+                const fileWarningMatch = skippedWarnings.match(new RegExp(`\\*\\*${file.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')}\\*\\*:\\n([\\s\\S]*?)(?=\\n\\n|$)`));
+                const fileWarnings = fileWarningMatch ? fileWarningMatch[1].trim() : '';
+                
+                let issueBody = [
+                  `## Missing Documentation File`,
+                  `**Source:** \`${file}\``,
+                  `**Repository:** ${{ github.repository }}`,
+                  `**Commit:** ${{ github.sha }}`,
+                  ''
+                ];
+                
+                // Add validation warnings if they exist
+                if (fileWarnings) {
+                  issueBody.push(
+                    `### ⚠️ Validation Warnings`,
+                    '```',
+                    fileWarnings,
+                    '```',
+                    ''
+                  );
+                }
+                
+                issueBody.push(
+                  `### Content Preview`,
+                  '```markdown',
+                  content.length > 1000 ? content.slice(0,1000) + '\n...(truncated)' : content,
+                  '```',
+                  '',
+                  '---',
+                  '*This issue was automatically created by the docs sync workflow.*'
+                );
+                
                 const issue = await github.rest.issues.create({
                   owner: '${{ env.TARGET_REPO }}'.split('/')[0],
                   repo: '${{ env.TARGET_REPO }}'.split('/')[1],
                   title: `📄 Missing documentation: ${fileName}`,
-                  body: [
-                    `## Missing Documentation File`,
-                    `**Source:** \`${file}\``,
-                    `**Repository:** ${{ github.repository }}`,
-                    `**Commit:** ${{ github.sha }}`,
-                    '',
-                    `### Content Preview`,
-                    '```markdown',
-                    content.length > 1000 ? content.slice(0,1000) + '\n...(truncated)' : content,
-                    '```',
-                    '',
-                    '---',
-                    '*This issue was automatically created by the docs sync workflow.*'
-                  ].join('\n'),
+                  body: issueBody.join('\n'),
                   labels: ['documentation', 'needs-docs', 'auto-created'],
                   assignees: ['${{ env.REVIEWERS }}']
                 });
@@ -176,6 +232,7 @@ jobs:
             core.setOutput('issue-urls', issueUrls.join(','));
         env:
           SKIPPED_FILES: ${{ steps.sync.outputs.skipped_files }}
+          SKIPPED_WARNINGS: ${{ steps.sync.outputs.skipped_warnings }}
 
       - name: Export Issue URLs
         if: steps.create_issues.outputs.issue-urls
@@ -205,7 +262,7 @@ jobs:
             ${{ steps.sync.outputs.synced_files || '_No files were synced_' }}
             
             ### ⚠️ Validation Warnings
-            ${{ steps.validate.outputs.validation_errors || '_No validation issues found_' }}
+            ${{ steps.sync.outputs.synced_warnings || '_No validation issues found for synced files_' }}
 
             ---
             
@@ -218,14 +275,26 @@ jobs:
       - name: 📊 Generate Summary
         if: always() && steps.detect.outputs.has_changes == 'true'
         run: |
-          # Get PR URL, synced and skipped files
+          # Get PR URL
           PR_URL="${{ steps.create_pr.outputs.pull-request-url }}"
+          
+          # Get synced files and their warnings
           SYNCED_FILES=$(cat << 'INNER_EOF'
           ${{ steps.sync.outputs.synced_files }}
           INNER_EOF
           )
+          SYNCED_WARNINGS=$(cat << 'INNER_EOF'
+          ${{ steps.sync.outputs.synced_warnings }}
+          INNER_EOF
+          )
+          
+          # Get skipped files and their warnings
           SKIPPED_FILES=$(cat << 'INNER_EOF'
           ${{ steps.sync.outputs.skipped_files }}
+          INNER_EOF
+          )
+          SKIPPED_WARNINGS=$(cat << 'INNER_EOF'
+          ${{ steps.sync.outputs.skipped_warnings }}
           INNER_EOF
           )
 
@@ -236,22 +305,23 @@ jobs:
             ISSUES_FORMATTED="_No issues created_"
           fi
 
-          # Prepare validation errors safely
-          VALIDATION_ERRORS=$(cat << 'INNER_EOF'
-          ${{ steps.validate.outputs.validation_errors }}
-          INNER_EOF
-          )
-          if [ -z "$VALIDATION_ERRORS" ]; then
-            VALIDATION_ERRORS="_No validation issues found_"
+          # Default messages for empty warnings
+          if [ -z "$SYNCED_WARNINGS" ]; then
+            SYNCED_WARNINGS="_No validation issues found for synced files_"
+          fi
+          
+          if [ -z "$SKIPPED_WARNINGS" ]; then
+            SKIPPED_WARNINGS="_No validation issues found for skipped files_"
           fi
 
-          # Append safely to GitHub Step Summary
+          # Append to GitHub Step Summary
           cat >> "$GITHUB_STEP_SUMMARY" << 'EOF'
           # 📚 Documentation Sync Summary
 
           ## ✅ Documentation Files Updated
           These files were automatically synced from the technical repository to the front-facing documentation repository.
           EOF
+          
           echo "$SYNCED_FILES" >> "$GITHUB_STEP_SUMMARY"
           
           if [ -n "$PR_URL" ]; then
@@ -261,10 +331,9 @@ jobs:
           
           cat >> "$GITHUB_STEP_SUMMARY" << 'EOF'
 
-          ## ⚠️ Markdown Validation Warnings
-          Some files may have formatting issues. These warnings do **not prevent syncing**, but you may want to review them:
+          ### ⚠️ Validation Warnings (Synced Files)
           EOF
-          echo "$VALIDATION_ERRORS" >> "$GITHUB_STEP_SUMMARY"
+          echo "$SYNCED_WARNINGS" >> "$GITHUB_STEP_SUMMARY"
           
           cat >> "$GITHUB_STEP_SUMMARY" << 'EOF'
 
@@ -272,8 +341,18 @@ jobs:
           These files could not be synced because they're missing in the documentation repo.  
           A GitHub issue was automatically created for each — the documentation team should review and add them.
 
-          Files:
+          ### Files:
           EOF
           echo "$SKIPPED_FILES" >> "$GITHUB_STEP_SUMMARY"
-          echo "" >> "$GITHUB_STEP_SUMMARY"
+          
+          cat >> "$GITHUB_STEP_SUMMARY" << 'EOF'
+
+          ### ⚠️ Validation Warnings (Skipped Files)
+          EOF
+          echo "$SKIPPED_WARNINGS" >> "$GITHUB_STEP_SUMMARY"
+          
+          cat >> "$GITHUB_STEP_SUMMARY" << 'EOF'
+
+          ### Created Issues:
+          EOF
           echo "$ISSUES_FORMATTED" >> "$GITHUB_STEP_SUMMARY"
